# rust-design-patterns

./: .gitattributes  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
behavioral/chain-of-responsibility/: README.md  README.zh-CN.md
behavioral/chain-of-responsibility/array/: Cargo.toml  bin.rs
behavioral/chain-of-responsibility/link/: Cargo.toml  bin.rs  lib.rs
behavioral/command/text-editor/: Cargo.toml  README.md  README.zh-CN.md  bin.rs
behavioral/finite-state-machine/: README.md  README.zh-CN.md
behavioral/finite-state-machine/function-style/: Cargo.toml  bin.rs
behavioral/finite-state-machine/state-machine/: Cargo.toml  bin.rs  lib.rs
behavioral/finite-state-machine/transition-table/: Cargo.toml  bin.rs
behavioral/finite-state-machine/transition-table-machine/: Cargo.toml  bin.rs
behavioral/interpreter/expression/: Cargo.toml  README.md  README.zh-CN.md  bin.rs
behavioral/iterator/number/: Cargo.toml  README.md  README.zh-CN.md  bin.rs
behavioral/mediator/chat-room/: Cargo.toml  README.md  README.zh-CN.md  bin.rs
behavioral/memento/editor/: Cargo.toml  README.md  README.zh-CN.md  bin.rs
behavioral/observer/event-bus/: Cargo.toml  bin.rs
behavioral/strategy/: README.md  README.zh-CN.md
behavioral/strategy/autostrategy/: Cargo.toml  README.md  README.zh-CN.md
behavioral/strategy/enum-dispatch-example/: Cargo.toml  README.md  README.zh-CN.md
behavioral/strategy/stateless/: Cargo.toml  README.md  README.zh-CN.md  bin.rs  lib.rs
behavioral/strategy/stateless-func/: Cargo.toml  README.md  README.zh-CN.md  bin.rs
behavioral/template-method/log/: Cargo.toml  bin.rs
behavioral/vistor/file-handler/: Cargo.toml  bin.rs  lib.rs
creational/builder/builder/: Cargo.toml  main.rs
creational/factory/abstract-factory/: Cargo.toml  main.rs
creational/factory/factory-method/: Cargo.toml  main.rs
creational/factory/simple-factory/: Cargo.toml  main.rs
creational/prototype/prototype/: Cargo.toml  main.rs
creational/singleton/singleton/: Cargo.toml  eager_01_mutex.rs  explicit_01_once_lock_1_70.rs  lazy_01_lazy_lock_1_80.rs  lazy_02_once_lock_1_70.rs  lazy_03_lazy_static_1_31.rs  lazy_04_princle.rs
structural/adapater/object/: Cargo.toml  bin.rs
structural/adapater/object_adapater/: Cargo.toml
structural/agent/Idempotency/: Cargo.toml  bin.rs  lib.rs
structural/bridge/cloud/: Cargo.toml  main.rs
structural/composite/file-system/: bin.rs
structural/composite/file_system/: Cargo.toml  bin.rs
structural/decorator/: README.md  README.zh-CN.md
structural/decorator/io/: Cargo.toml  bin.rs  lib.rs
structural/facade/player/: Cargo.toml
structural/facade/player_facade/: bin.rs
structural/flyweight/permission/: Cargo.toml  bin.rs
techniques/callback/codegen-template/: Cargo.toml  ast.rs  bin.rs  callback.rs  gen_c.rs  gen_js.rs  gen_py.rs  template.rs
techniques/callback/hook/: Cargo.toml  bin.rs
techniques/callback/listener/: Cargo.toml  (+1 more)
(+92 files in other folders)
