[workspace]
resolver = "3"
members = [
  "creational/builder/builder",
  "creational/factory/abstract-factory",
  "creational/factory/factory-method",
  "creational/factory/simple-factory",
  "creational/singleton/singleton",

  "structural/bridge/cloud",
  "structural/agent/Idempotency",
  "structural/decorator/io",
  "structural/adapater/object_adapater",
  "structural/facade/player_facade",
  "structural/composite/file_system",
  "structural/flyweight/permission",

  "behavioral/observer/event_bus",
]
