[workspace]
resolver = "3"
members = [
  "creational/builder/builder",
  "creational/factory/abstract-factory",
  "creational/factory/factory-method",
  "creational/factory/simple-factory",
  "creational/singleton/singleton",

  "structural/bridge/cloud",
  "structural/agent/Idempotency",
  "structural/decorator/io",
  "structural/adapater/object",
  "structural/facade/player",
  "structural/composite/file-system",
  "structural/flyweight/permission",

  "behavioral/observer/event-bus",
  "behavioral/template_method/log",
  "techniques/callback/codegen-template",
  "techniques/callback/listener",
  "techniques/callback/hook",
]
