[workspace]
resolver = "3"
members = [
  "creational/builder/builder",
  "creational/factory/abstract-factory",
  "creational/factory/factory-method",
  "creational/factory/simple-factory",
  "creational/singleton/singleton",

  "structural/bridge/cloud",
  "structural/agent/Idempotency",
  "structural/decorator/io",
  "structural/adapater/object",
  "structural/facade/player",
  "structural/composite/file-system",
  "structural/flyweight/permission",

  "behavioral/observer/event-bus",
  "behavioral/template-method/log",
  "behavioral/vistor/file-handler",
  "behavioral/strategy/stateless",
  "behavioral/strategy/stateless-func",
  "behavioral/chain-of-responsibility/link",
  "behavioral/chain-of-responsibility/array",
  "behavioral/finite-state-machine/state-machine",
  "behavioral/finite-state-machine/function-style",
  "behavioral/finite-state-machine/transition-table",
  "behavioral/finite-state-machine/transition-table-machine",
  "behavioral/iterator/number",
  
  "techniques/callback/codegen-template",
  "techniques/callback/listener",
  "techniques/callback/hook",
]
