[package]
edition = "2024"
name = "singleton"
version = "0.1.0"

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.18"

[[bin]]
name = "singleton-lazy-01"
path = "lazy_01_lazy_lock_1_80.rs"

[[bin]]
name = "singleton-lazy-02"
path = "lazy_02_once_lock_1_70.rs"

[[bin]]
name = "singleton-lazy-03"
path = "lazy_03_lazy_static_1_31.rs"

[[bin]]
name = "singleton-lazy-04"
path = "lazy_04_princle.rs"

[[bin]]
name = "singleton-mutex"
path = "eager_01_mutex.rs"


[[bin]]
name = "singleton-explicit-01"
path = "explicit_01_once_lock_1_70.rs"
